add student initial version

--- a/src/main/resources/templates/students_create.html
+++ b/src/main/resources/templates/students_create.html
@@ -115,7 +115,7 @@
               <h1>Create new student</h1>
 
 
-              <form class="row">
+              <form class="row" method="post" action="/students/create">
                 <div class="form-process">
                   <div class="css3-spinner">
                     <div class="css3-spinner-scaler"></div>
@@ -412,7 +412,7 @@
                   </select>
                 </div>
                 <div class="col-12">
-                  <button type="submit" name="freelance-quote-submit" class="btn btn-secondary">Send Quote</button>
+                  <button type="submit" name="freelance-quote-submit" class="btn btn-secondary">Create</button>
                 </div>
               </form>
             </div>
