--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -48,7 +48,7 @@
           ============================================= -->
           <div id="logo">
             <a href="index.html">
-              <img class="logo-default" height="50" data-th-src="@{/images/codingburgas_logo.png}" alt="Codingburgas Logo">
+              <img class="logo-default" height="50" src="../static/images/codingburgas_logo.png" data-th-src="@{/images/codingburgas_logo.png}" alt="Codingburgas Logo">
             </a>
           </div><!-- #logo end -->
 
