--- a/src/main/resources/templates/student_details.html
+++ b/src/main/resources/templates/student_details.html
@@ -9,7 +9,7 @@
 
   <!-- Font Imports -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
   <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:ital@0;1&display=swap"
       rel="stylesheet">
