removed old to-do's, selenium demonstration added

--- a/src/main/resources/templates/notes.html
+++ b/src/main/resources/templates/notes.html
@@ -95,10 +95,10 @@
       </div>
 
       <div class="col-md-6">
-        <h3>Best student: <a th:href="|/students/${bestStudent.getId()}|" th:text="|${bestStudent.getFirstname()} ${bestStudent.getLastname()}|"></a></h3>
-        <h3>Worst student: <a>TODO</a></h3>
-        <h3>Student with most 6: <a>TODO</a></h3>
-        <h3>Student with most 2: <a>TODO</a></h3>
+        <h3>Best student: <a id="best-student" th:href="|/students/${bestStudent.getId()}|" th:text="|${bestStudent.getFirstname()} ${bestStudent.getLastname()}|"></a></h3>
+        <h3>Worst student: <a id="worst-student">TODO</a></h3>
+        <h3>Student with most 6: <a id="student-most-6">TODO</a></h3>
+        <h3>Student with most 2: <a id="student-most-2">TODO</a></h3>
       </div>
     </div>
 
