Custom form login added

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -57,6 +57,9 @@
             <li class="menu-item mega-menu">
               <a class="menu-link" href="#"><div>About</div><span>Latest News</span></a>
             </li>
+            <li sec:authorize="isAuthenticated()"  class="menu-item mega-menu">
+              <a class="menu-link" href="/profile"><div>Logged in</div><span sec:authentication="name"></span></a>
+            </li>
           </ul>
 
         </nav><!-- #primary-menu end -->
@@ -64,7 +67,6 @@
         <form class="top-search-form" action="search.html" method="get">
           <input type="text" name="q" class="form-control" value="" placeholder="Type &amp; Hit Enter.." autocomplete="off">
         </form>
-
       </div>
     </div>
   </div>
